syntax = "proto3";

option java_package = "com.stoock.grpcserver";
option java_outer_classname = "GreetProto";

service Greeter {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  rpc StreamNotifications(stream NotificationRequest) returns (stream NotificationResponse);
}

message SendNotificationRequest {
  string room_id = 1;  // 방 ID
  string user_id = 2;  // 사용자 ID
  string message = 3;  // 메시지 내용
}

message SendNotificationResponse {
  string status = 1;  // 응답 상태
}

message NotificationRequest {
  string room_id = 1;  // 방 ID
  string user_id = 2;  // 사용자 ID
  string message = 3;  // 메시지 내용
  string status = 4;   // 상태
}

message NotificationResponse {
  string user_id = 1;  // 사용자 ID
  string update = 2;    // 알림 메시지
}
